Updated spell API endpoints
